testsuite/tests/typecheck/should_fail/T14761a.stderr

T14761a.hs:3:34: error:
    {-# UNPACK #-} applied to a compound type.
    Did you mean to add parentheses?
      {-# UNPACK #-} (Maybe Int)
